# dida365-api

./: CHANGELOG.md  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: code-check.yml  publish.yml
docs/api/: client.md
docs/guides/: authentication.md  projects.md  tasks.md
src/dida365/: __init__.py  auth.py  client.py  config.py  exceptions.py  http.py  logger.py  settings.py
src/dida365/models/: base.py  countdown.py  focus.py  habit.py  project.py  project_group.py  task.py
