[build-system]
requires = ["flit_core>=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "dida365-api"
version = "0.2.1"
description = "Python client for Dida365/TickTick API"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Carter Yifeng Cheng", email = "cyfine@github.com" },
    { name = "Konano", email = "nanoapezlk@gmail.com" },
]
keywords = ["dida365", "ticktick", "task-management"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Office/Business :: Scheduling",
]
dependencies = [
    "httpx>=0.24.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "tomli>=2.0.0",
    "pydantic-settings>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/Konano/dida365-api"
Repository = "https://github.com/Konano/dida365-api"
Changelog = "https://github.com/Konano/dida365-api/blob/main/CHANGELOG.md"

[tool.flit.sdist]
include = ["src/dida365"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.lint.isort]
known-first-party = ["dida365"]

[tool.dida365]
# Environment variable prefix
env_prefix = "DIDA365_"

# Default service type (dida365 or ticktick)
default_service = "ticktick"

# Token storage location
token_file = ".dida365_token.json"

# Logging configuration
log_level = "INFO"  # DEBUG, INFO, WARNING, ERROR, CRITICAL
log_format = "%(asctime)s - %(name)s - %(levelname)s - %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"
log_file = ""  # Set to a path to enable file logging
debug = false    # Enable debug mode (sets log level to DEBUG)

# Request timeouts (in seconds)
[tool.dida365.request_timeout]
connect = 10.0  # Connection timeout
read = 30.0     # Read timeout
write = 30.0    # Write timeout
pool = 5.0      # Pool timeout